conformance/tests/listenerset-http-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listenerset-http-listener
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: empty-hostname
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: example-com
    port: 80
    protocol: HTTP
    hostname: "example.com"
    allowedRoutes:
      namespaces:
        from: All
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: listenerset-with-http-listener
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
  listeners:
  - name: foo-com
    port: 80
    protocol: HTTP
    hostname: "foo.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: bar-com
    port: 80
    protocol: HTTP
    hostname: "bar.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-all-listeners
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gateway-route
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-example-com-on-gateway
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
    sectionName: example-com
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /example-com
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-all-listeners-on-listenerset
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: listenerset-with-http-listener
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listenerset-route
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-bar-com-on-listenerset
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: listenerset-with-http-listener
    namespace: gateway-conformance-infra
    sectionName: bar-com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /bar-com
    backendRefs:
    - name: infra-backend-v1
      port: 8080
